packages/compiler-rs/tests/snapshots/v_bind__with_constant_value.snap
---
source: tests/v_bind.rs
expression: code
---
import { setProp as _setProp, template as _template } from "vue";
const t0 = _template("<div e=\"2\" f=\"foo1\" g=\"1\" h=\"1\"></div>", true);
(() => {
  const n0 = t0();
  _setProp(n0, "a", void 0);
  _setProp(n0, "b", 1 > 2);
  _setProp(n0, "c", 1 + 2);
  _setProp(n0, "d", 1 ? 2 : 3);
  _setProp(n0, "i", true);
  _setProp(n0, "j", null);
  _setProp(n0, "l", { foo: 1 });
  _setProp(n0, "n", { ...{ foo: 1 } });
  _setProp(n0, "o", [
    1,
    ,
    3
  ]);
  _setProp(n0, "p", [1, ...[2, 3]]);
  _setProp(n0, "q", [1, 2]);
  _setProp(n0, "r", /\s+/);
  return n0;
})();
